<resources>
    <string name="app_name">DoItNow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="re_enter_your_password">Re enter your password</string>
    <string name="not_regisered_yet">Not regisered yet</string>
    <string name="log_in">Log in</string>
</resources>